cmake_minimum_required(VERSION 3.16)
project(pathos)

set(CMAKE_CXX_STANDARD 14)

include_directories(${CMAKE_SOURCE_DIR}/src)

# GTest Unit Tests
add_subdirectory(test)

add_library(Sources
        src/abstract/Observable.h
        src/abstract/Observer.h
        src/controller/Char.h
        src/controller/Controller.h
        src/controller/Input.h
        src/controller/NcursesController.h
        src/core/PathosInstance.cc
        src/core/PathosInstance.h
        src/core/Position.h
        src/event/CheckVicinityEvent.cc
        src/event/CheckVicinityEvent.h
        src/event/Event.h
        src/event/EventManager.cc
        src/event/EventManager.h
        src/event/LeaveModeEvent.h
        src/event/MultipleEvent.cc
        src/event/MultipleEvent.h
        src/event/PlayerAttackHostileEvent.h
        src/event/PlayerMoveDownEvent.cc
        src/event/PlayerMoveDownEvent.h
        src/event/PlayerMoveLeftEvent.cc
        src/event/PlayerMoveLeftEvent.h
        src/event/PlayerMoveRightEvent.cc
        src/event/PlayerMoveRightEvent.h
        src/event/PlayerMoveUpEvent.cc
        src/event/PlayerMoveUpEvent.h
        src/event/PlayerTalkToFriendlyEvent.cc
        src/event/PlayerTalkToFriendlyEvent.h
        src/event/QuitEvent.cc
        src/event/QuitEvent.h
        src/event/UpdateQuestEvent.cc
        src/event/UpdateQuestEvent.h
        src/item/consume/Chicken.h
        src/item/consume/Consumable.h
        src/item/consume/SmallPotion.h
        src/item/equip/bow/ArachneBow.h
        src/item/equip/bow/Bow.h
        src/item/equip/bow/CentaurBow.h
        src/item/equip/bow/CerberusBow.h
        src/item/equip/bow/ChaosBow.h
        src/item/equip/bow/ChimeraBow.h
        src/item/equip/bow/CyclopsBow.h
        src/item/equip/bow/HarpyBow.h
        src/item/equip/bow/HekaBow.h
        src/item/equip/bow/HydraBow.h
        src/item/equip/bow/MedusaBow.h
        src/item/equip/bow/MinotaurBow.h
        src/item/equip/bow/PetrifiedBow.h
        src/item/equip/bow/PutridBow.h
        src/item/equip/bow/ScyllaBow.h
        src/item/equip/bow/WolfBow.h
        src/item/equip/greatsword/ArachneGreatsword.h
        src/item/equip/greatsword/CentaurGreatsword.h
        src/item/equip/greatsword/CerberusGreatsword.h
        src/item/equip/greatsword/ChaosGreatsword.h
        src/item/equip/greatsword/ChimeraGreatsword.h
        src/item/equip/greatsword/CyclopsGreatsword.h
        src/item/equip/greatsword/Greatsword.h
        src/item/equip/greatsword/HarpyGreatsword.h
        src/item/equip/greatsword/HekaGreatsword.h
        src/item/equip/greatsword/HydraGreatsword.h
        src/item/equip/greatsword/MedusaGreatsword.h
        src/item/equip/greatsword/MinotaurGreatsword.h
        src/item/equip/greatsword/PetrifiedGreatsword.h
        src/item/equip/greatsword/PutridGreatsword.h
        src/item/equip/greatsword/ScyllaGreatsword.h
        src/item/equip/greatsword/WolfGreatsword.h
        src/item/equip/staff/ArachneStaff.h
        src/item/equip/staff/CentaurStaff.h
        src/item/equip/staff/CerberusStaff.h
        src/item/equip/staff/ChaosStaff.h
        src/item/equip/staff/ChimeraStaff.h
        src/item/equip/staff/CyclopsStaff.h
        src/item/equip/staff/HarpyStaff.h
        src/item/equip/staff/HekaStaff.h
        src/item/equip/staff/HydraStaff.h
        src/item/equip/staff/MedusaStaff.h
        src/item/equip/staff/MinotaurStaff.h
        src/item/equip/staff/PetrifiedStaff.h
        src/item/equip/staff/PutridStaff.h
        src/item/equip/staff/ScyllaStaff.h
        src/item/equip/staff/Staff.h
        src/item/equip/staff/WolfStaff.h
        src/item/equip/Equipable.h
        src/item/equip/Weapon.h
        src/item/Item.h
        src/map/AthensMap.cc
        src/map/AthensMap.h
        src/map/Ground.h
        src/map/Map.cc
        src/map/Map.h
        src/map/MapManager.h
        src/map/MapObject.h
        src/map/Wall.h
        src/mob/friendly/merchant/Blacksmith.cc
        src/mob/friendly/merchant/Blacksmith.h
        src/mob/friendly/merchant/GeneralMerchant.cc
        src/mob/friendly/merchant/GeneralMerchant.h
        src/mob/friendly/merchant/Leatherworker.cc
        src/mob/friendly/merchant/Leatherworker.h
        src/mob/friendly/merchant/Merchant.h
        src/mob/friendly/merchant/Trader.cc
        src/mob/friendly/merchant/Trader.h
        src/mob/friendly/quest/Ariadne.cc
        src/mob/friendly/quest/Ariadne.h
        src/mob/friendly/quest/Gaia.cc
        src/mob/friendly/quest/Gaia.h
        src/mob/friendly/quest/QuestGiver.h
        src/mob/friendly/quest/QuestRecipient.h
        src/mob/friendly/romance/Aphrodite.cc
        src/mob/friendly/romance/Aphrodite.h
        src/mob/friendly/romance/Apollo.cc
        src/mob/friendly/romance/Apollo.h
        src/mob/friendly/romance/Ares.cc
        src/mob/friendly/romance/Ares.h
        src/mob/friendly/romance/Artemis.cc
        src/mob/friendly/romance/Artemis.h
        src/mob/friendly/romance/Athena.cc
        src/mob/friendly/romance/Athena.h
        src/mob/friendly/romance/Dionysus.cc
        src/mob/friendly/romance/Dionysus.h
        src/mob/friendly/romance/Hephaestus.cc
        src/mob/friendly/romance/Hephaestus.h
        src/mob/friendly/romance/Hermes.cc
        src/mob/friendly/romance/Hermes.h
        src/mob/friendly/romance/QuestGiverRomanceable.h
        src/mob/friendly/romance/Romanceable.cc
        src/mob/friendly/romance/Romanceable.h
        src/mob/friendly/romance/Tyche.cc
        src/mob/friendly/romance/Tyche.h
        src/mob/friendly/Demeter.cc
        src/mob/friendly/Demeter.h
        src/mob/friendly/Friendly.h
        src/mob/friendly/Hades.cc
        src/mob/friendly/Hades.h
        src/mob/friendly/Hera.cc
        src/mob/friendly/Hera.h
        src/mob/friendly/Hestia.cc
        src/mob/friendly/Hestia.h
        src/mob/friendly/Poseidon.cc
        src/mob/friendly/Poseidon.h
        src/mob/friendly/Zeus.cc
        src/mob/friendly/Zeus.h
        src/mob/hostile/Arachne.cc
        src/mob/hostile/Arachne.h
        src/mob/hostile/Centaur.cc
        src/mob/hostile/Centaur.h
        src/mob/hostile/Cerberus.cc
        src/mob/hostile/Cerberus.h
        src/mob/hostile/Chaos.cc
        src/mob/hostile/Chaos.h
        src/mob/hostile/Chimera.cc
        src/mob/hostile/Chimera.h
        src/mob/hostile/Cronus.cc
        src/mob/hostile/Cronus.h
        src/mob/hostile/EnragedBull.cc
        src/mob/hostile/EnragedBull.h
        src/mob/hostile/Harpy.cc
        src/mob/hostile/Harpy.h
        src/mob/hostile/Hekatonkheires.cc
        src/mob/hostile/Hekatonkheires.h
        src/mob/hostile/Hostile.h
        src/mob/hostile/Hydra.cc
        src/mob/hostile/Hydra.h
        src/mob/hostile/Manticore.cc
        src/mob/hostile/Manticore.h
        src/mob/hostile/Medusa.cc
        src/mob/hostile/Medusa.h
        src/mob/hostile/Minotaur.cc
        src/mob/hostile/Minotaur.h
        src/mob/hostile/PetrifiedGod.cc
        src/mob/hostile/PetrifiedGod.h
        src/mob/hostile/PutridBile.cc
        src/mob/hostile/PutridBile.h
        src/mob/hostile/Scylla.cc
        src/mob/hostile/Scylla.h
        src/mob/hostile/VengefulCyclops.cc
        src/mob/hostile/VengefulCyclops.h
        src/mob/hostile/Wolf.cc
        src/mob/hostile/Wolf.h
        src/mob/player/Player.h
        src/mob/Mob.h
        src/mode/handler/ModeHandler.cc
        src/mode/handler/ModeHandler.h
        src/mode/handler/AttackModeHandler.cc
        src/mode/handler/AttackModeHandler.h
        src/mode/handler/MovementModeHandler.cc
        src/mode/handler/MovementModeHandler.h
        src/mode/handler/QuestModeHandler.cc
        src/mode/handler/QuestModeHandler.h
        src/mode/AttackMode.cc
        src/mode/AttackMode.h
        src/mode/Mode.h
        src/mode/MovementMode.cc
        src/mode/MovementMode.h
        src/mode/QuestMode.cc
        src/mode/QuestMode.h
        src/quest/athens/KillWolvesQuest.cc
        src/quest/athens/KillWolvesQuest.h
        src/quest/Quest.h
        src/quest/QuestManager.cc
        src/quest/QuestManager.h
        src/request/ClearQuickStatusRequest.cc
        src/request/ClearQuickStatusRequest.h
        src/request/ClearTalkRequest.cc
        src/request/ClearTalkRequest.h
        src/request/MapRequest.cc
        src/request/MapRequest.h
        src/request/MultipleRequest.cc
        src/request/MultipleRequest.h
        src/request/NotificationRequest.cc
        src/request/NotificationRequest.h
        src/request/QuestRequest.cc
        src/request/QuestRequest.h
        src/request/StatusRequest.cc
        src/request/StatusRequest.h
        src/request/TalkRequest.cc
        src/request/TalkRequest.h
        src/request/ViewRequest.h
        src/state/Stats.h
        src/state/Status.h
        src/view/curses/MapView.cc
        src/view/curses/MapView.h
        src/view/curses/NcursesInstance.cc
        src/view/curses/NcursesInstance.h
        src/view/curses/NcursesView.cc
        src/view/curses/NcursesView.h
        src/view/curses/NcursesViewDecorator.h
        src/view/curses/StatusView.cc
        src/view/curses/StatusView.h
        src/view/View.cc
        src/view/View.h)

add_executable(pathos src/main.cc)

# Linking PDCurses
add_subdirectory(pdcurses)
target_link_libraries(Sources
        PRIVATE
        Curses)

target_link_libraries(pathos Sources)